<resources>
    <string name="app_name">觅幂</string>
    <string name="network_unavailable">当前无可用网络</string>
    <string name="input_user_name">输入您的账号</string>
    <string name="input_pass_word">输入您的登录密码</string>
    <string name="save_password">记住密码</string>
    <string name="login">登    录</string>
    <string name="registered">立即注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="share_login">第三方登录</string>
    <string name="account">账号</string>
    <string name="your_phone_number">你的手机号</string>
    <string name="to_obtain_code">获取验证码</string>
    <string name="your_verification_code">请输入短信验证码</string>
    <string name="verification_code">验证码</string>
    <string name="your_password">请输入您的密码</string>
    <string name="commite_your_password">确认密码</string>
    <string name="commite_password">确认密码</string>
    <string name="commite_modify">确认修改</string>
    <string name="login_">登录</string>
    <string name="modify_the_password">修改密码</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="empty_error">请输入完整...</string>
    <string name="input_to_obtain_code">输入验证码</string>
    <string name="input_phone_number">输入您的手机号</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="registered_solo">注册</string>
    <string name="home_page">首页</string>
    <string name="social">社交</string>
    <string name="course">课程</string>
    <string name="mine">我的</string>
    <string name="input_prompt">请输入关键字</string>
    <string name="the_slogan">今天, 你运动了吗 ?</string>
    <string name="time">时间</string>
    <string name="price">价格</string>
    <string name="near">附近</string>
    <string name="number_of_people">人数</string>
    <string name="empty_content">当前没有内容</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="confirm">确认</string>
    <string name="appointment_time">预约时间</string>
    <string name="nervous">紧张</string>
    <string name="sign_up">报名</string>
    <string name="money">￥</string>
    <string name="message">消息</string>
    <string name="friends_circle">好友圈</string>
    <string name="wallet">健身钱包</string>
    <string name="collection">收藏</string>
    <string name="friends">好友</string>
    <string name="dynamic">动态</string>
    <string name="balance">余额</string>
    <string name="card">健身卡</string>
    <string name="ranking_list">排行榜</string>
    <string name="weekly">周报</string>
    <string name="CV">履历</string>
    <string name="sign_in">签到</string>
    <string name="dynamic_release">发布动态</string>
    <string name="add_friends">添加好友</string>
    <string name="action_qr">扫一扫</string>
    <string name="comments">评论</string>
    <string name="forwarding">转发</string>
    <string name="cancle">取消</string>
    <string name="report">举报</string>
    <string name="input_report_content">请输入你举报的内容...</string>
    <string name="report_content">举报内容</string>
    <string name="all_comments">全部评论</string>
    <string name="dynamic_body">正文</string>
    <string name="post">发送</string>
    <string name="input_comment">评论内容输入</string>
    <string name="send">发送</string>
    <string name="input_reply">写评论</string>
    <string name="share_news">分享新鲜事</string>
    <string name="release_new_dynamic">发布动态</string>
    <string name="release">发布</string>
    <string name="dynamic_or_save">是否保存当前编辑内容 ?</string>
    <string name="photo_or_remover">是否放弃上传这张照片 ?</string>
    <string name="finish">再按一次退出程序</string>
    <string name="history_search">搜索历史</string>
    <string name="clear">清除</string>
    <string name="or_empty_serach_history">是否清空历史搜索记录</string>
    <string name="the_gym">健身房</string>
    <string name="coach">教练</string>
    <string name="add_friend">添加好友</string>
    <string name="say_hello">打招呼</string>
    <string name="more">查看更多</string>
    <string name="my_tag">我的标签</string>
    <string name="corners_tag">+自定义</string>
    <string name="add_tag">添加标签</string>
    <string name="input_corners_tag">请输入自定义标签</string>
    <string name="coach_private">私人教练</string>
    <string name="score">评分</string>
    <string name="gym">健身房</string>
    <string name="the_personal">的个人</string>
    <string name="the_related">的相关</string>
    <string name="students_list_log">学员记录</string>
    <string name="course_our_shop">本店课程</string>
    <string name="need_to_know">须知</string>
    <string name="instructions">须知</string>
    <string name="user_evaluation">用户评价</string>
    <string name="reservations_now">立即预定</string>
    <string name="personal_elucidation">说明</string>
    <string name="coures_form">课程列表</string>
    <string name="comments_additional">追加评论</string>
    <string name="appointment_now">立即预约</string>
    <string name="online_information">在线咨询</string>
    <string name="select_training_camp">请选择训练场地</string>
    <string name="training_camp">训练营</string>
    <string name="select_student">请选择学员</string>
    <string name="student">学员</string>
    <string name="total">合计:</string>
    <string name="pay_order">支付订单</string>
    <string name="invite_friends">邀请好友</string>
    <string name="select_site">选择场地</string>
    <string name="complete">完成</string>
    <string name="people_count">健身人数</string>
    <string name="delete">删除</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="page_pay">钱包支付</string>
    <string name="select_pay">选择支付方式</string>
    <string name="confirm_pay">确认支付</string>
    <string name="remaining">剩余:</string>
    <string name="lack_of_balance">余额不足</string>
    <string name="my_trip">我的行程</string>
    <string name="cp">私教</string>
    <string name="treat">我要请客</string>
    <string name="select_share">马上分享</string>
    <string name="fitness_treat">请客健身</string>
    <string name="fitness_treat_content">请ta健身,为健康加油</string>
    <string name="share_friend">邀请免单</string>
    <string name="the_share">分享到</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat_friend_circle">微信朋友圈</string>
    <string name="qq">QQ</string>
    <string name="current_balance">当前余额</string>
    <string name="vip_top_up">会员充值</string>
    <string name="confirm_top_up">确认充值</string>
    <string name="billing_details">账单明细</string>
    <string name="giving">送</string>
    <string name="fitness_card">健身卡办理</string>
    <string name="handle_card">立即办理</string>
    <string name="renewal">续费</string>
    <string name="money_page">钱包</string>
    <string name="qr_code_instructions">加好友,扫门禁,淘好货</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="edit_data">编辑资料</string>
    <string name="user_photo">头像</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="location">所在地</string>
    <string name="dynamic_visible">动态对他人可见</string>
    <string name="face_recognition">人脸识别</string>
    <string name="save">保存</string>
    <string name="account_no_change">(不可修改)</string>
    <string name="city">城市</string>
    <string name="add_friend_validation">填写好友验证信息</string>
    <string name="apply_for_friend">申请好友</string>
    <string name="insights">说点什么</string>
    <string name="login_out">退出当前账户</string>
    <string name="account_management">账户管理</string>
    <string name="clear_time">清空</string>
    <string name="order">我的订单</string>
    <string name="waiting_payment">待付款</string>
    <string name="waiting_complete">待完成</string>
    <string name="already_complete">已完成</string>
    <string name="already_cancle">已取消</string>
    <string name="take_payment">去付款</string>
    <string name="cancle_order">取消订单</string>
    <string name="payment">去付款</string>
    <string name="complete_order">完成订单</string>
    <string name="evaluation">评价</string>
    <string name="additional_evaluation">追加评论</string>
    <string name="refunding">退款中</string>
    <string name="content_null">内容为空</string>
    <string name="scan_success">扫描成功</string>
    <string name="qr_code">扫一扫</string>
    <string name="qr_prompt">将二维码放入框内,即可自动扫描</string>
    <string name="add_friends_alias">觅幂</string>
    <string name="find_friend">觅友</string>
    <string name="find_course">觅课</string>
    <string name="prompt_phone_number_error">请输入规范手机号</string>
    <string name="seconds_about">秒</string>
    <string name="prompt_verification_error">请输入正确验证码</string>
    <string name="prompt_pass_word_error">密码不相同，请重新核对</string>
    <string name="prompt_empty_error">密码不可为空</string>
    <string name="modify_successful">修改成功</string>
    <string name="clear_dynamic">删除动态</string>
    <string name="to_report_success">投诉成功</string>
    <string name="delet_dynamic_successful">删除成功</string>
    <string name="chat">进入聊天</string>
    <string name="my_home_page">我的主页</string>
    <string name="the_home_page">的主页</string>
    <string name="delet_dynamic">删除动态</string>
    <string name="experience">经验</string>
    <string name="appointment_count">次预约</string>
    <string name="the_dynamic">的动态</string>
    <string name="forwarding_dynamic_successful">转发成功</string>
    <string name="forwarding_error">发布人或已转发者不可转发</string>
    <string name="tag_existing">当前标签已存在</string>
    <string name="my_dynamic">我的动态</string>
    <string name="change_personal_successful">修改成功</string>
    <string name="photo_img_error">头像、人脸识别不可为空</string>
    <string name="nicek_name_empty_error">昵称不可为空</string>
    <string name="release_successful">发布成功</string>
    <string name="dynamic_empty_error">动态不可为空</string>
    <string name="all">全部</string>
    <string name="people_total_consumption">人消费</string>
    <string name="price_prompt">元/次</string>
    <string name="reply">回复 :</string>
    <string name="collection_successful">收藏成功</string>
    <string name="cancle_successful">取消成功</string>
    <string name="or_the_delet_order">是否删除订单</string>
    <string name="or_the_cancle_order">是否取消订单</string>
    <string name="end_date">截止日期:</string>
    <string name="price_unit">元</string>
    <string name="about">其他</string>
    <string name="distance">距离您</string>
    <string name="convention_gym">预约健身房</string>
    <string name="select">选择</string>
    <string name="modify_signature">更新个性签名</string>
    <string name="signature">个性签名</string>
    <string name="select_gym">选择训练场地</string>
    <string name="commite_successful">提交成功</string>
    <string name="convention_course">预约课程</string>
    <string name="full">满员</string>
    <string name="full_error">当前已满员</string>
    <string name="convention">预约</string>
    <string name="course_arrange">课程安排</string>
    <string name="course_description">课程介绍</string>
    <string name="course_instructions">课程须知</string>
    <string name="course_info">课程详情</string>
    <string name="people_perform">人已报名</string>
    <string name="people_class">人班</string>
    <string name="calories">千卡</string>
    <string name="balance_pay">余额支付</string>
    <string name="pay_prompt">支付订单费用</string>
    <string name="pay_successful">支付成功</string>
    <string name="handle_card_succesful">办理成功</string>
    <string name="convention_successful">预约成功</string>
    <string name="order_pay_successful">订单支付成功</string>
    <string name="input_obtain_code">输入验证码</string>
    <string name="bind">立即绑定</string>
    <string name="prompt_obtain_code_error">验证码错误</string>
    <string name="bind_successful">绑定成功</string>
    <string name="bind_phone">手机绑定</string>
    <string name="my_collection">我的收藏</string>
    <string name="student_form">学员列表</string>
    <string name="student_form_log">学员记录</string>
    <string name="service_center">客服中心</string>
    <string name="details">详情</string>
    <string name="fitness">健身</string>
    <string name="scan_error">未能识别当前验证码</string>
    <string name="new_friends">新朋友</string>
    <string name="release_video">短视频动态</string>
    <string name="release_img">图文动态</string>
</resources>