<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/report"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />

        <TextView
            android:id="@+id/release_video"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/release_video"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14"
            android:visibility="gone" />

        <View
            android:id="@+id/line_release"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_"
            android:visibility="gone" />
        <TextView
            android:id="@+id/release_img"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/release_img"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp5"
            android:background="@color/gray_" />

        <TextView
            android:id="@+id/cancle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />


    </LinearLayout>

</RelativeLayout>