<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center"
            android:text="@string/the_share"
            android:textColor="@color/black"
            android:textSize="@dimen/dp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_marginTop="@dimen/dp15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wechat_friend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp5"
                android:drawableTop="@drawable/wechat_max_icon"
                android:gravity="center"
                android:text="@string/wechat_friend"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp13" />

            <TextView
                android:id="@+id/wechat_friend_circle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp5"
                android:drawableTop="@drawable/wechat_friend_circle_icon"
                android:gravity="center"
                android:text="@string/wechat_friend_circle"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp13" />

            <TextView
                android:id="@+id/qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/dp5"
                android:drawableTop="@drawable/qq_max_icon"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp13" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>