<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="center"
            android:textColor="@color/blue_bar"
            android:textSize="@dimen/dp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp14" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp14" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/day"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp14" />

            <TextView
                android:id="@+id/time_hour_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp14"
                android:visibility="gone" />

            <TextView
                android:id="@+id/time_minute_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/dp14"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.weigan.loopview.LoopView
                android:id="@+id/loop_view_year"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                app:awv_centerTextColor="@color/gray_light_text"
                app:awv_outerTextColor="@color/gray_light"
                app:awv_textsize="14" />

            <com.weigan.loopview.LoopView
                android:id="@+id/loop_view_month"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                app:awv_centerTextColor="@color/gray_light_text"
                app:awv_outerTextColor="@color/gray_light"
                app:awv_textsize="14" />

            <com.weigan.loopview.LoopView
                android:id="@+id/loop_view_day"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                app:awv_centerTextColor="@color/gray_light_text"
                app:awv_outerTextColor="@color/gray_light"
                app:awv_textsize="14" />

            <com.weigan.loopview.LoopView
                android:id="@+id/loop_view_hour"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:awv_centerTextColor="@color/gray_light_text"
                app:awv_outerTextColor="@color/gray_light"
                app:awv_textsize="14" />

            <com.weigan.loopview.LoopView
                android:id="@+id/loop_view_minute"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:visibility="gone"
                app:awv_centerTextColor="@color/gray_light_text"
                app:awv_outerTextColor="@color/gray_light"
                app:awv_textsize="14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/gray_light" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/dp14" />


    </LinearLayout>

</RelativeLayout>